--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "film",
   "description": "Aplication search film api",
   "dependencies": {
+    "@polymer/iron-ajax": "^3.0.1",
+    "@polymer/iron-input": "^3.0.1",
+    "@polymer/paper-button": "^3.0.1",
+    "@polymer/paper-input": "^3.0.1",
     "@polymer/polymer": "^3.0.0"
   },
   "devDependencies": {
