--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "dependencies": {
     "@material/typography": "^1.0.0",
     "@polymer/iron-ajax": "^3.0.1",
+    "@polymer/iron-icon": "^3.0.1",
+    "@polymer/iron-icons": "^3.0.1",
     "@polymer/iron-input": "^3.0.1",
     "@polymer/paper-button": "^3.0.1",
     "@polymer/paper-input": "^3.0.1",
+    "@polymer/paper-spinner": "^3.0.2",
     "@polymer/polymer": "^3.0.0",
     "destyle.css": "^1.0.5"
   },
