--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "description": "Aplication search film api",
   "dependencies": {
     "@material/typography": "^1.0.0",
+    "@polymer/app-route": "^3.0.2",
     "@polymer/iron-ajax": "^3.0.1",
     "@polymer/iron-icon": "^3.0.1",
     "@polymer/iron-icons": "^3.0.1",
     "@polymer/iron-input": "^3.0.1",
+    "@polymer/iron-pages": "^3.0.1",
     "@polymer/paper-button": "^3.0.1",
     "@polymer/paper-input": "^3.0.1",
     "@polymer/paper-spinner": "^3.0.2",
